update data pipeline